<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutL"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/la"
    tools:context=".MainActivity" >

   <TextView
       android:id="@+id/headwelcome"
       style="@style/Header"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:text="@string/headwelcome" />

   <Button
       android:id="@+id/btncreate"
       style="@style/ButtonL"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:background="@android:drawable/btn_default"
       android:onClick="onClick"
       android:layout_marginTop="20dp"
       android:text="@string/btncreate" />

   <Button
       android:id="@+id/btnviewhistory"
       style="@style/ButtonL"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="20dp"
       android:background="@android:drawable/btn_default"
       android:onClick="onClick"
       android:text="@string/btnviewhistory" />
   
   <Button
       android:id="@+id/btnaboutus"
       style="@style/ButtonL"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       
       android:background="@android:drawable/btn_default"
       android:onClick="onClick"
       android:text="@string/btnaboutus" />

   <LinearLayout 
       android:id="@+id/statuslayout"
       android:orientation="vertical"
       android:background="#CCb3b3b3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="30dp">
       
       <LinearLayout 
	       android:id="@+id/statuslayoutline1"
	       android:orientation="horizontal"
	       android:background="#CCb3b3b3"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content">
	       
           <TextView
       			android:id="@+id/statuspersonname"
       			android:layout_width="wrap_content"
	       		android:layout_height="wrap_content"
	       		android:text="@string/labelfriendname"
	       		android:textStyle="bold"/>
           <TextView
       			android:id="@+id/statusdistleft"
       			android:layout_width="wrap_content"
	       		android:layout_height="wrap_content"
	       		android:layout_marginLeft="40dp"
	       		android:text="@string/labeldistleft" 
	       		android:textStyle="bold"/>
           <TextView
       			android:id="@+id/statustimeleft"
       			android:layout_width="wrap_content"
	       		android:layout_height="wrap_content"
	       		android:layout_marginLeft="40dp"
	       		android:text="@string/labeltimeleft" 
	       		android:textStyle="bold"/>
           
		</LinearLayout>
       
   </LinearLayout>

    
  <Button
       android:id="@+id/btnexit"
       style="@style/ButtonL"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:background="@android:drawable/btn_default"
       android:onClick="onClick"
       android:text="@string/btnexit" />
   
  
 
    
</LinearLayout>



     